syntax = "proto3";

service Factorial {
  rpc CalcFactorial(FactorialRequest) returns (FactorialResponse) {}
}

message FactorialRequest {
  int32 number = 1;
}

message FactorialResponse {
  int32 result = 1;
}
